src/test/deca/codegen/valid/return-constantMethod.deca.skip
class A {
    int method(){
        return 3;
    }
}