src/test/deca/codegen/invalid/dereferencementNull.deca.skip
class A {
    int coco = 3;
}

class B {
    A a;

    A noixDe() {
        return this.a;
    }
}

{
    B b = new B();
    A a = b.noixDe();
    print(a.coco);
}

